# RippleOscilloscope

./: Cargo.toml  README.md
shaders/: wave.wgsl
src/: lib.rs  renderer.rs  wave.rs
web/: index.html
web/css/: style.css
web/js/: audio.js  main.js
